webook/k8s-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-live-mysql
spec:
  selector:
    app: webook-live-mysql
  ports:
    - protocol: TCP
      port: 11309 #你访问数据库的端口号
      targetPort: 3306
      nodePort: 30004
  type: NodePort
